src/objects/PD_Custom_Object__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>custom_email__c</fullName>
        <label>custom email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>newnew__c</fullName>
        <label>newnew</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>[PD] Custom Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>[PD] Custom Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>[PD] Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>